style.css
:root {
  /* --primaryColor: #c084fc; */
  --primaryColor: #eab308;
  --header-content-width: 800px;
  /* --text-backgroundColor: #fdf4ff; */
  --text-backgroundColor: #fefce8;
  /* --background-transparent: rgb(254, 252, 232, 0.2); */
  --background-transparent: rgb(0, 0, 0, 0.2);
}

* {
  box-sizing: border-box;
  margin: 0;
  padding: 0;
}

html,
body {
  width: 100%;
  height: 100%;
  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
}

/* header */

header {
  filter: drop-shadow(rgba(0, 0, 0, 0.35) 0px 5px 15px);
  min-height: 100%;
  width: 100%;
  display: grid;
  justify-items: center;
  align-items: center;
  padding: 5vw 2.5vw;
  margin-bottom: 50px;
}

.path-wrapper {
  height: 90vh;
  width: 100%;
  position: absolute;
  top: 0;
  left: 0;
  background-color: var(--primaryColor);
  clip-path: polygon(0% 0%, 100% 0%, 100% 50%, 5% 100%, 0% 100%);
  z-index: -1;
}

.contentWrapper {
  /* position: relative; */
}

.image-wrapper {
  width: 38%;
  float: left;
  margin-right: 20px;
  position: relative;
  /* border: solid 1px blue; */
}

header .photo {
  z-index: 2;
  width: 100%;
  object-fit: cover;
  border-radius: 10px;
  margin-right: 20px;
  position: relative;
  box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px,
    rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px,
    rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;
}

header .name {
  position: absolute;
  bottom: 0;
  width: 100%;
  z-index: 3;
  color: black;
  font-size: 1.1rem;
  font-weight: bold;
  text-align: center;
  background-color: var(--primaryColor);
  padding: 10px;
  border-radius: 0 0 10px 10px;
  text-shadow: 0px 4px 3px rgba(0, 0, 0, 0.4), 0px 8px 13px rgba(0, 0, 0, 0.1),
    0px 18px 23px rgba(0, 0, 0, 0.1);
}

.about-wrapper {
  padding: 75px 2.5vw;
  position: relative;
  height: 100%;
  width: 100%;
  /* border: solid 1px red; */
  top: 50%;
}

.textcontainer {
  padding: 20px;
  max-width: var(--header-content-width);
  background-color: var(--text-backgroundColor);
  border-radius: 10px 0 0 0;
  position: relative;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 13px 27px -5px,
    rgba(0, 0, 0, 0.3) 0px 8px 16px -8px;
}

.textcontainer h1 {
  margin: 20px 0;
}

.links {
  padding: 24px 0;
}

.links a {
  float: right;
  margin-left: 10px;
}

/* my work */

.my-work {
  padding: 0 0 10vh 0;
}

.my-work h1 {
  text-transform: capitalize;
  margin-bottom: 50px;
  position: sticky;
  top: 0;
  width: 100%;
  background-color: white;
  padding: 20px 0 20px 5vw;
  z-index: 30;
  /* width: 30vw; */
  /* color: var(--primaryColor); */
}

.projects {
  padding: 0 5vw;
  display: grid;
  grid-template-columns: repeat(auto-fill, minmax(340px, 1fr));
  gap: 50px 20px;
  grid-auto-rows: max-content;
}

.project {
  box-shadow: rgba(17, 12, 46, 0.15) 0px 48px 100px 0px;
  cursor: pointer;
  background-color: white;
  transition: transform 200ms linear;
  border-radius: 10px;
  padding-bottom: 10px;
  /* border: solid 2px var(--text-backgroundColor); */
}

.project:hover {
  transform: translateY(-20px);
}

.project > .project-image-wrapper {
  width: 100%;
  min-height: 220px;
}

.project-image-wrapper img {
  border-radius: 10px 10px 0 0;
  width: 100%;
  height: 100%;
  object-fit: cover;
  /* border: solid 1px red; */
}

.project h2 {
  margin: 15px 0 0 0;
  padding: 20px;
  text-transform: capitalize;
  background-color: var(--primaryColor);
}

.description {
  padding: 20px;
  background-color: var(--text-backgroundColor);
}

.project .links {
  padding-right: 20px;
}

/* footer */
footer {
  min-height: 100%;
  position: relative;
  /* filter: drop-shadow(rgba(0, 0, 0, 0.35) 0px 5px 15px); */
  padding: 0 0 5vh 0;
}
footer h1 {
  text-transform: capitalize;
  margin-bottom: 50px;
  padding: 10px 0 10px 5vw;
  /* padding: 30px; */
  position: sticky;
  top: 0;
  /* position: sticky;
  top: 0;
  padding: 30px;
  background-color: #f9fafb; */

  /* width: 35vw; */
}
footer .grid-wrapper {
  padding: 0 5vw;
  display: grid;
  grid-template-columns: repeat(2, 1fr);
  /* grid-template-columns: repeat(auto-fit, minmax(500px, 1fr)); */
  gap: 2.5vw;
  align-items: center;
}

/* .footer-path-wrapper {
  height: 90%;
  background-color: var(--primaryColor);

  position: absolute;
  bottom: 0;
  left: 0;
  width: 100%;
  clip-path: polygon(0 50%, 5% 50%, 100% 0%, 100% 100%, 0 100%);
  z-index: -1;
} */

.contact-me {
  background-color: var(--primaryColor);
  padding: 20px;
  border-radius: 10px;
  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px;
  /* color: white; */
}

.contact-me img {
  vertical-align: middle;
  margin-right: 10px;
}

.contact-me > .links > a {
  float: none;
  margin-left: 0;
}

.mapouter {
  border-radius: 10px;
  box-shadow: 0px 3px 5px -1px rgba(0, 0, 0, 0.2),
    0px 6px 10px 0px rgba(0, 0, 0, 0.14), 0px 1px 18px 0px rgba(0, 0, 0, 0.12);
}

.gmap_canvas {
  border-radius: 10px;
}

.contact-me p:nth-child(1),
.myaddress {
  margin-bottom: 20px;
  line-height: 1.5rem;
}

.contact-me > div:nth-child(3),
.contact-me > div:nth-child(4),
.contact-me > div:nth-child(5) {
  padding: 10px 0;
  /* border: solid 1px blue; */
}

.contact-me > div:nth-child(3) > a,
.contact-me > div:nth-child(4) > a {
  text-decoration: none;
  color: black;
}

@media screen and (max-width: 778px) {
  footer h1 {
    background-color: #f9fafb;
  }

  footer .grid-wrapper {
    grid-template-columns: 1fr;
    justify-items: auto;
    gap: 20px;
  }
}

